cambio de planes: galeria, concepto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/png" href="img/logo/favicon.png" />
     <title>GAMEWS | home</title>
   </head>
@@ -12,13 +12,13 @@
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
-      <a class="hover-1" href="#home">Home</a>
-      <a class="hover-1" href="#gallery">Gallery</a>
+      <a>Home</a>
+      <a class="hover-1" href="gallery.html">Gallery</a>
       <a class="hover-1" href="#about">About</a>
+      <a class="hover-1" href="https://strategywiki.org/wiki/Main_Page">Guides</a>
       <a class="hover-1" href="">Merch</a>
       <a class="hover-1" href="">News</a>
       <a class="hover-1" href="">Log In</a>
-      <a class="hover-1" href="">Contact</a>
     </section>
     <!-- FIN SIDEBAR -->
 
@@ -58,39 +58,6 @@
       </div>
     </section>
     <!-- FIN ABOUT -->
-
-    <!-- COMIENZO GALLERY -->
-    <section class="CSSgal" id="gallery">
-      <!-- Don't wrap targets in parent -->
-      <s id="s1"></s>
-      <s id="s2"></s>
-      <s id="s3"></s>
-      <s id="s4"></s>
-
-      <div class="slider">
-        <div class="background text-slide" style="background: #000000">
-          <img src="" alt="GTA San Andreas THE DEFINITIVE EDITION" />
-        </div>
-        <div class="background" style="background: #000000">
-          <img src="" alt="GTA Vice City THE DEFINITIVE EDITION" />
-        </div>
-        <div class="background" style="background: #000000">
-          <img src="" alt="GTA III THE DEFINITIVE EDITION" />
-        </div>
-        <div class="background" style="background: #000000">
-          <img src="" alt="GTA V" />
-        </div>
-      </div>
-
-      <div class="prevNext">
-        <div><a href="#s4"></a><a href="#s2"></a></div>
-        <div><a href="#s1"></a><a href="#s3"></a></div>
-        <div><a href="#s2"></a><a href="#s4"></a></div>
-        <div><a href="#s3"></a><a href="#s1"></a></div>
-      </div>
-    </section>
-
-    <!-- FIN GALLERY -->
 
     <!-- COMIENZO NEWS -->
 
