--- a/gallery.html
+++ b/gallery.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="gallery.css" />
     <link rel="icon" type="image/png" href="img/logo/favicon.png" />
-    <title>GAMEWS | gallery</title>
+    <title>GAMMEWS | Editors' picks</title>
   </head>
   <body>
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="index.html">Home</a>
-      <a>Gallery</a>
+      <a>Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
-      <a class="hover-1" href="https://strategywiki.org/wiki/Main_Page">Guides</a>
-      <a class="hover-1" href="">Merch</a>
+      <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
+      <a class="hover-1" href="">Editors' picks</a>
       <a class="hover-1" href="">News</a>
       <a class="hover-1" href="">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
     <!-- COMIENZO GALLERY -->
-    <section class="CSSgal" id="gallery">
-      <!-- Don't wrap targets in parent -->
+    <!--     <section class="CSSgal" id="gallery">
+       Don't wrap targets in parent
       <s id="s1"></s>
       <s id="s2"></s>
       <s id="s3"></s>
@@ -48,7 +48,7 @@
           <img src="img/carrusel/halo.jpg" alt="HALO INFINITE" />
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- FIN GALLERY -->
   </body>
