--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/png" href="img/logo/favicon.png" />
-    <title>GAMEWS | home</title>
+    <title>GAMMEWS | home</title>
   </head>
   <body>
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
       <a>Home</a>
-      <a class="hover-1" href="gallery.html">Gallery</a>
+      <a class="hover-1" href="gallery.html">Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
-      <a class="hover-1" href="https://strategywiki.org/wiki/Main_Page">Guides</a>
-      <a class="hover-1" href="">Merch</a>
+      <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
       <a class="hover-1" href="">News</a>
       <a class="hover-1" href="">Log In</a>
     </section>
@@ -25,38 +24,19 @@
     <!-- COMIENZO GRID -->
     <div class="container_cons">
       <div class="switch">
-        <img src="img/hero/switch.png" alt="" />
+        <img src="img/hero/1.png" alt="" />
       </div>
       <div class="play">
-        <img src="img/hero/play.png" alt="" />
+        <img src="img/hero/3.png" alt="" />
       </div>
       <div class="xbox">
-        <img src="img/hero/xbox.png" alt="" />
+        <img src="img/hero/2.png" alt="" />
       </div>
     </div>
     <!-- FIN GRID -->
 
     <!-- COMIENZO ABOUT -->
-    <section class="about_container" id="about">
-      <div class="txt_about">
-        <h2>
-          <span
-            class="txt-rotate"
-            data-period="2000"
-            data-rotate='[ "-Surviving Is Winning! Everything Else Is Bulls***! Fairytales Spun By People Afraid To Look Life In The Eye! Whatever It Takes, Kid! Survive!",
-            "-What Kinda F****** Animal Do You Take Me For? No, I Didnt Kill Him! But I Did Kidnap His Wife.",
-            "-I suppose... A bullet in the head is as close to natural causes as anything in this city.",
-            "-I will tell you what we are gonna do. You are gonna find out who took our cocaine, and then, Im gonna kill them." ]'
-          ></span>
-        </h2>
-      </div>
-      <div id="cf4a" class="videoWrapper">
-        <img src="" />
-        <img src="" />
-        <img src="" />
-        <img src="" />
-      </div>
-    </section>
+
     <!-- FIN ABOUT -->
 
     <!-- COMIENZO NEWS -->
@@ -79,7 +59,6 @@
       </div>
     </section>
     <!-- FIN NEWS -->
-    <script src="typing.js" type="module"></script>
     <script src="main.js" type="module"></script>
   </body>
 </html>
