organización de folders

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="gallery.css" />
+    <link rel="stylesheet" href="/style/gallery.css" />
     <link rel="icon" type="image/png" href="img/logo/favicon.png" />
     <title>GAMMEWS | Editors' picks</title>
   </head>
@@ -12,7 +12,7 @@
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
-      <a class="hover-1" href="index.html">Home</a>
+      <a class="hover-1" href="/index.html">Home</a>
       <a>Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
