--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link rel="icon" type="image/png" href="img/logo/favicon.png" />
     <title>GAMMEWS | home</title>
   </head>
@@ -13,7 +13,7 @@
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
       <a>Home</a>
-      <a class="hover-1" href="gallery.html">Editors' picks</a>
+      <a class="hover-1" href="pages/gallery.html">Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
       <a class="hover-1" href="">News</a>
@@ -59,6 +59,6 @@
       </div>
     </section>
     <!-- FIN NEWS -->
-    <script src="main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
