news api/style change

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
-      <a>Home</a>
       <a class="hover-1" href="pages/gallery.html">Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
-      <a class="hover-1" href="">News</a>
+      <a class="hover-1" href="pages/news.html">News</a>
       <a class="hover-1" href="">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
-
     <!-- COMIENZO GRID -->
     <div class="container_cons">
       <div class="switch">
@@ -38,27 +36,5 @@
     <!-- COMIENZO ABOUT -->
 
     <!-- FIN ABOUT -->
-
-    <!-- COMIENZO NEWS -->
-
-    <section class="news">
-      <div class="news_container">
-        <div id="text_0"></div>
-        <div id="source_0"></div>
-        <a href="url_0">Leer mas +</a>
-      </div>
-      <div class="news_container">
-        <div id="text_1"></div>
-        <div id="source_1"></div>
-        <a href="url_1">Leer mas +</a>
-      </div>
-      <div class="news_container">
-        <div id="text_2"></div>
-        <div id="source_2"></div>
-        <a href="url_2">Leer mas +</a>
-      </div>
-    </section>
-    <!-- FIN NEWS -->
-    <script src="js/main.js" type="module"></script>
   </body>
 </html>
