--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <a class="hover-1" href="pages/gallery.html">Editors' picks</a>
       <a class="hover-1" href="#about">About</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
-      <a class="hover-1" href="pages/news.html">News</a>
       <a class="hover-1" href="">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
@@ -36,5 +35,52 @@
     <!-- COMIENZO ABOUT -->
 
     <!-- FIN ABOUT -->
+        <!-- COMIENZO NEWS -->
+
+    <section class="news">
+      <div class="news_container">
+        <div id="title_0"></div>
+        <div id="short_description_0"></div>
+         <div><img id="img" alt=""></div>
+        <a id="url_0"></a>
+      </div>
+       <div class="news_container">
+        <div id="title_1"></div>
+        <div id="short_description_1"></div>
+         <div><img id="img1" alt=""></div>
+        <a id="url_1"></a>
+      </div>
+      </div>
+       <div class="news_container">
+        <div id="title_2"></div>
+        <div id="short_description_2"></div>
+         <div><img id="img2" alt=""></div>
+        <a id="url_2"></a>
+      </div>
+
+
+      <div class="news_container">
+        <div id="title_3"></div>
+        <div id="short_description_3"></div>
+         <div><img id="img3" alt=""></div>
+        <a id="url_3"></a>
+      </div>
+       <div class="news_container">
+        <div id="title_4"></div>
+        <div id="short_description_4"></div>
+         <div><img id="img4" alt=""></div>
+        <a id="url_4"></a>
+      </div>
+      </div>
+       <div class="news_container">
+        <div id="title_5"></div>
+        <div id="short_description_5"></div>
+         <div><img id="img5" alt=""></div>
+        <a id="url_5"></a>
+      </div>
+    </section>
+
+    <!-- FIN NEWS -->
+    <script src="/js/main.js" type="module"></script>
   </body>
 </html>
