org paginas/footer

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
-      <a class="hover-1" href="pages/gallery.html">Editors' picks</a>
-      <a class="hover-1" href="#about">About</a>
+      <a class="hover-1" href="/pages/about.html">About MMO</a>
+      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
-      <a class="hover-1" href="">Log In</a>
+      <a class="hover-1" href="/pages/login.html">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
     <!-- COMIENZO GRID -->
@@ -79,8 +79,15 @@
         <a id="url_5"></a>
       </div>
     </section>
-
     <!-- FIN NEWS -->
+    <!-- COMIENZO FOOTER -->
+    <footer>
+      <div class="footer_img">
+        <img src="/img/footer/logo.png" alt="">
+        <p>Hecho por Ailin Gonzalez</p>
+      </div>
+    </footer>
+    <!-- FIN FOOTER -->
     <script src="/js/main.js" type="module"></script>
   </body>
 </html>
