--- a/pages/login.html
+++ b/pages/login.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/gallery.css" />
-    <link rel="icon" type="image/png" href="img/logo/favicon.png" />
-    <title>GAMMEWS | Editors' picks</title>
+    <link rel="stylesheet" href="/style/login.css" />
+    <link rel="icon" type="image/png" href="/img/logo/favicon.png" />
+    <title>GAMMEWS | log in</title>
   </head>
   <body>
     <!-- COMIENZO SIDEBAR -->
     <section class="sidebar">
-      <img src="img/logo/logo_blanco.png" class="side_img" />
+      <img src="/img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="/index.html">Home</a>
-      <a>Editors' picks</a>
-      <a class="hover-1" href="#about">About</a>
+      <a class="hover-1" href="/pages/about.html">About MMO</a>
+      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
-      <a class="hover-1" href="">Editors' picks</a>
-      <a class="hover-1" href="">News</a>
-      <a class="hover-1" href="">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
     <!-- COMIENZO GALLERY -->
@@ -51,5 +48,13 @@
     </section> -->
 
     <!-- FIN GALLERY -->
+    <!-- COMIENZO FOOTER -->
+    <footer>
+      <div class="footer_img">
+        <img src="/img/footer/logo.png" alt="" />
+        <p>Hecho por Ailin Gonzalez</p>
+      </div>
+    </footer>
+    <!-- FIN FOOTER -->
   </body>
 </html>
