gallery en about

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,14 +13,14 @@
     <section class="sidebar">
       <img src="/img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="/index.html">Home</a>
-      <a class="hover-1" href="pages/editorpicks.html">Editors' picks</a>
+      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
       <a class="hover-1" href="">Log In</a>
     </section>
     <!-- FIN SIDEBAR -->
+
     <!-- COMIENZO GALLERY -->
-    <!--     <section class="CSSgal" id="gallery">
-       Don't wrap targets in parent
+    <section class="CSSgal" id="gallery">
       <s id="s1"></s>
       <s id="s2"></s>
       <s id="s3"></s>
@@ -33,21 +33,21 @@
       </div>
       <div class="slider">
         <div class="background text-slide" style="background: #000000">
-          <img src="img/carrusel/sonic.jpg" alt="SONIC FRONTIERS" />
+          <img src="/img/carrusel/elderscrolls.jpg" alt="The Elder Scrolls Online" />
         </div>
         <div class="background" style="background: #000000">
-          <img src="img/carrusel/bayonetta.jpg" alt="BAYONETTA III" />
+          <img src="/img/carrusel/destiny.jpg" alt="Destiny 2" />
         </div>
         <div class="background" style="background: #000000">
-          <img src="img/carrusel/gow.jpg" alt="GOD OF WAR RAGNAROK" />
+          <img src="/img/carrusel/guildwars.jpg" alt="Guild Wars 2" />
         </div>
         <div class="background" style="background: #000000">
-          <img src="img/carrusel/halo.jpg" alt="HALO INFINITE" />
+          <img src="/img/carrusel/lostark.jpg" alt="Lost Ark" />
         </div>
       </div>
-    </section> -->
-
+    </section>
     <!-- FIN GALLERY -->
+
     <!-- COMIENZO FOOTER -->
     <footer>
       <div class="footer_img">
