responsive mobile/mediaquery

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </section>
     <!-- FIN SIDEBAR -->
     <!-- COMIENZO GRID -->
+    <section class="hero">
     <div class="container_cons">
       <div class="switch">
         <img src="img/hero/1.png" alt="" />
@@ -30,6 +31,7 @@
         <img src="img/hero/2.png" alt="" />
       </div>
     </div>
+    </section>
     <!-- FIN GRID -->
 
     <!-- COMIENZO ABOUT -->
