cambios about/contact

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="sidebar">
       <img src="img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="/pages/about.html">About MMO</a>
-      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
+      <a class="hover-1" href="/pages/contactus.html">Contact Us</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
       <a class="hover-1" href="/pages/login.html">Log In</a>
     </section>
