--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
     <section class="sidebar">
       <img src="/img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="/index.html">Home</a>
-      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
+      <a class="hover-1" href="/pages/contactus.html">Contact Us</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
       <a class="hover-1" href="">Log In</a>
     </section>
@@ -47,6 +47,40 @@
       </div>
     </section>
     <!-- FIN GALLERY -->
+    <section class="about">
+      <div class="about-titulo">
+        <h1 style="font-weight: 500">What Is an MMO?</h1>
+        <h3 style="font-weight: 400">Massively multiplayer online games, explained</h3>
+      </div>
+      <div class="about-body">
+        <p>
+          It’s a game where you play with lots of other players online to achieve the goal you would normally achieve in
+          a single player game. However it is team-oriented and even though you can play on your own that’s not always
+          the case. Some mmos have a mandatory team-oriented play-through. You also can’t play without an internet
+          connection. In that game you can communicate with other player as you would in real life, primarily in english
+          and use this to beat the game. Also there is no actual beating of them game each player considers his own goal
+          of the game. The game is actually infinite and is focused around making friends and player communication.
+        </p>
+      </div>
+      <div class="top-12">
+        <h2>12 Notable MMORPG Video Game</h2>
+        <p>The first MMORPGs were released almost 20 years ago and more are still being made today:</p>
+        <ul>
+          <li>1- Ultima Online (1997)</li>
+          <li>2- EverQuest (1999)</li>
+          <li>3- Anarchy Online (2001)</li>
+          <li>4- Dark Age Of Camelot (2001)</li>
+          <li>5- RuneScape (2001)</li>
+          <li>6- A Tale In The Desert (2003)</li>
+          <li>7- EVE Online (2003)</li>
+          <li>8- World Of Warcraft (2004)</li>
+          <li>9- Guild Wars (2005)</li>
+          <li>10- Dungeons & Dragons Online (2006)</li>
+          <li>11- The Lord Of The Rings Online (2007)</li>
+          <li>12- Age Of Conan (2008)</li>
+        </ul>
+      </div>
+    </section>
 
     <!-- COMIENZO FOOTER -->
     <footer>
