--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
       <img src="/img/logo/logo_blanco.png" class="side_img" />
       <a class="hover-1" href="/index.html">Home</a>
       <a class="hover-1" href="/pages/about.html">About MMO</a>
-      <a class="hover-1" href="/pages/editorpicks.html">Editors' picks</a>
+      <a class="hover-1" href="/pages/contactus.html">Contact Us</a>
       <a class="hover-1" href="https://store.epicgames.com/es-ES/c/mmo-games">Epic Games Store(ES)</a>
     </section>
     <!-- FIN SIDEBAR -->
